<resources>
    <string name="app_name">wordsrpg</string>

    <!-- 메인 bottom 네비게이션    -->
    <string name="menu_for_home">홈</string>
    <string name="menu_for_library">라이브러리</string>
    <string name="menu_for_board">게시판</string>
    <string name="menu_for_battle">배틀</string>
    <string name="menu_for_my_room">마이룸</string>

    <!--메인 toolbar menu -->
    <string name="toolbar_menu_for_setting">setting</string>

    <!-- setting(셋팅) 액티비티 -->
    <string name="setting_btn_logout">로그아웃</string>
    <string name="setting_btn_license">라이센스</string>
    <string name="setting_btn_version">버전</string>

    <!-- 메인 메뉴  english -->
    <string name="menu_for_library_en">Library</string>
    <string name="menu_for_battle_en">Battle</string>
    <string name="menu_for_my_room_en">My Room</string>

    <!-- 메인 메뉴  korean -->
    <string name="menu_for_library_kr">라이브러리</string>
    <string name="menu_for_battle_kr">배틀</string>
    <string name="menu_for_my_room_kr">마이룸</string>


    <!-- 암기Activity 툴바 메뉴 -->
    <!-- Basic(기본) 패키지 -->
    <string name="toolbar_menu_for_hide_all_word">단어만 모두 가리기</string>
    <string name="toolbar_menu_for_hide_all_mean">뜻만 모두 가리기</string>
    <string name="toolbar_menu_for_print_test_paper_as_pdf">시험지 PDF 출력</string>
    <string name="toolbar_menu_for_take_an_exam">시험 보기</string>

    <!-- My(내) 패키지 -->
    <string name="toolbar_menu_for_add_word">단어 추가하기</string>
    <string name="str_package_search">패키지 검색하기</string>


    <!-- Different(구독/다른사람의) 패키지 -->
    <string name="toolbar_menu_for_search_more_package">패키지 더보기</string>


    <!-- activity_add_new_custom_package str   -->
    <string name="str_activity_title">내 커스텀 패키지 추가</string>
    <string name="str_package_name_title">패키지 이름</string>
    <string name="str_add_package_name_hint">패키지 이름을 지어주세요</string>
    <string name="str_package_thumbnail_title">패키지 대표 이미지 등록 (선택)</string>
    <string name="str_package_preview">미리보기</string>
    <string name="str_add_new_tag_hint">추가할 태그를 입력해주세요</string>
    <string name="str_complete">완료</string>
    <string name="str_add">추가</string>
    <string name="str_tag_size_max">태그는 최대 3개 입니다. </string>
    <string name="str_tag_no_duplicate">똑같은 태그는 사용불가!</string>
    <string name="str_tag_detect_space">태그는 단어 한개로 구성해주세요</string>
    <string name="str_tag_no_content">적은 태그 내용이 없습니다.</string>
    <string name="str_add_new_tag_title">패키지를 표현할 태그를 최대 3개 추가해주세요</string>
    <string name="str_default_package_name_shown_in_xml">패키지 이름</string>
    <string name="str_package_like_count_example">하트 3개</string>


    <!-- fragment_search_custom_package str  -->
    <string name="str_filter_title">제목</string>
    <string name="str_filter_tag">태그</string>
    <string name="str_search_edit_tv_hint">패키지를 검색해보세요</string>

    <!-- viewgroup_custom_package_search  -->
    <string name="hint_search_custom_package">패키지를 검색해보세요</string>

    <!-- item_custom_package_recycler_view  str -->
    <string name="str_liked_count">%1$d 개</string>

    <string name="battlePlay_currentQuestionCount">현재 풀고 있는 문제(%d)번</string>
    <string name="battlePlay_currentDifficulty">게임 난이도: (%s)</string>
    <string name="battlePlay_completeQuestionCount">지금까지 풀었던 문제 갯수(%d)개</string>
    <string name="battlePlay_opponentUserCompleteQuestionCount">상대가 풀었던 문제 갯수(%d)개</string>


    <string name="package_thumbnail">페키지 썸네일</string>
    <string name="package_writer">\[ %s \]</string>
    <string name="move_study">STUDY</string>
    <string name="move_test">TEST</string>

    <string name="study_mic">TTS</string>
    <string name="exit">종료</string>
    <string name="stage">STAGE %s</string>
    <string name="expand_and_collapse">접고 펼치기</string>
    <string name="move_study_dialog">GO</string>

    <string name="next">다음</string>
    <string name="previous">이전</string>
    <string name="test">테스트 보러가기</string>

    <string name="friendListCount">%d명</string>

    <string name="dialog_battle_result_currentScore">(%d점)</string>
    <string name="dialog_battle_result_plusScore">+%d점</string>
    <string name="dialog_battle_result_newScore">%d점</string>

    <string name="imagePath">android.resource://com.uhavecodingproblem.wordsrpg/drawable/%s</string>

    <string name="googleClientID">599473159954-e4c0ra3s0ujdc07gcbiqcj2l25mll5id.apps.googleusercontent.com</string>

    <string name="facebook_app_id">687653535291177</string>
    <string name="fb_login_protocol_scheme">fb687653535291177</string>
    <string name="test_result">결과</string>
    <string name="submission">제출</string>
    <string name="test_right_answer">정답 개수 : %s</string>
    <string name="test_wrong_answer">틀린 개수 : %s</string>
    <string name="test_total_score">총점 : %s0점</string>

</resources>