<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- TODO:// 하드코딩 됨 -->
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/default_padding">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin">
        <ImageView
            android:id="@+id/iv_userProfile"
            android:layout_width="64dp"
            android:layout_height="64dp"/>
        <TextView
            android:id="@+id/tv_userName"
            android:text="유저이름"
            android:textSize="30dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"/>

    </LinearLayout>

    <Button
        android:id="@+id/btn_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/setting_btn_logout"
        android:textSize="32dp"
        android:textColor="@color/basic_button_text_color"
        android:theme="@style/customButtonFontStyle"
        android:backgroundTint="@color/basic_button_color"/>

    <Button
        android:id="@+id/btn_license"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/setting_btn_license"
        android:textSize="32dp"
        android:textColor="@color/basic_button_text_color"
        android:theme="@style/customButtonFontStyle"
        android:backgroundTint="@color/basic_button_color"/>

    <Button
        android:id="@+id/btn_version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/setting_btn_version"
        android:textSize="32dp"
        android:textColor="@color/basic_button_text_color"
        android:theme="@style/customButtonFontStyle"
        android:backgroundTint="@color/basic_button_color"/>

</LinearLayout>
</layout>