<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
       <variable
           name="thisActivity"
           type="com.uhavecodingproblem.wordsrpg.ui.activity.AddNewCustomPackageActivity" />
    </data>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.08" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.60" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />


    <ImageView
        android:id="@+id/img_back_btn"
        android:layout_width="50dp"
        android:layout_height="45dp"
        android:layout_marginTop="5dp"
        android:onClick="@{thisActivity::backIconClicked}"
        app:layout_constraintEnd_toStartOf="@id/tv_activity_title"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/guideline"
        app:srcCompat="?attr/actionModeCloseDrawable" />

    <TextView
        android:id="@+id/tv_activity_title"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginTop="5dp"
        android:gravity="center_vertical"
        android:paddingStart="20dp"
        android:text="@string/str_activity_title"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/img_back_btn"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/tv_package_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/str_package_name_title"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline" />

    <EditText
        android:id="@+id/edit_tv_package_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:textSize="15sp"
        android:background="@null"
        android:backgroundTint="@color/colorBlack"
        android:ems="10"
        android:hint="@string/str_add_package_name_hint"
        android:textColorHint="@color/colorGray"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/guideline1"
        app:layout_constraintTop_toBottomOf="@id/tv_package_name"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.9" />


    <TextView
        android:id="@+id/tv_package_thumbnail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/str_package_thumbnail_title"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline1" />


    <ImageView
        android:id="@+id/img_package_thumbnail"
        android:layout_width="100dp"
        android:layout_height="0dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:layout_marginStart="20dp"
        android:onClick="@{thisActivity::pickThumbNailImageFromGallery}"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/guideline2"
        app:layout_constraintTop_toBottomOf="@id/tv_package_thumbnail"
        android:src="@drawable/on_my_room" />


    <ImageView
        android:id="@+id/arrow_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:rotation="180"
        app:layout_constraintBottom_toBottomOf="@id/img_package_thumbnail"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toEndOf="@id/img_package_thumbnail"
        app:layout_constraintTop_toTopOf="@id/img_package_thumbnail"
        app:srcCompat="?attr/actionModeCloseDrawable" />

    <TextView
        android:id="@+id/tv_preview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
         android:layout_marginTop="3dp"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintBottom_toBottomOf="@id/guideline2"
        app:layout_constraintStart_toEndOf="@id/img_package_thumbnail"
        app:layout_constraintTop_toBottomOf="@id/arrow_icon"
        android:text="@string/str_package_preview" />

    <TextView
        android:id="@+id/tv_package_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/str_add_new_tag_title"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline2" />



    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll_chip_group"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:minHeight="70dp"
        android:padding="5dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorGray"
        android:layout_marginStart="20dp"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.9"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintBottom_toTopOf="@+id/edit_tv_add_new_tag"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_package_tag">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chip_group"
            android:layout_gravity="top"
            android:paddingStart="5dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:singleLine="false"
            app:chipSpacing="0dp"
            app:chipSpacingHorizontal="5dp"
            app:chipSpacingVertical="1dp"
            tools:ignore="RtlSymmetry">
        </com.google.android.material.chip.ChipGroup>

    </androidx.core.widget.NestedScrollView>


    <EditText
        android:id="@+id/edit_tv_add_new_tag"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:textSize="15sp"
        android:background="@null"
        android:backgroundTint="@color/colorBlack"
        android:ems="10"
        android:maxLength="10"
        android:hint="@string/str_add_new_tag_hint"
        android:textColorHint="@color/colorGray"
        android:inputType="text"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/guideline3"
        app:layout_constraintTop_toBottomOf="@id/scroll_chip_group"
         />

    <Button
        android:id="@+id/btn_add_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorGray"
        android:onClick="@{thisActivity::addTag}"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintEnd_toEndOf="@id/edit_tv_add_new_tag"
        app:layout_constraintTop_toTopOf="@id/edit_tv_add_new_tag"
        app:layout_constraintStart_toStartOf="@id/edit_tv_add_new_tag"
        app:layout_constraintBottom_toBottomOf="@id/edit_tv_add_new_tag"
        android:text="@string/str_add" />




    <Button
        android:id="@+id/btn_complete"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/str_complete"
        android:textSize="23sp"
        android:textColor="@color/colorWhite"
        android:onClick="@{thisActivity::completeAddNewCustomPackage}"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.85"
        app:layout_constraintTop_toBottomOf="@id/guideline3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>