<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="information"
            type="com.uhavecodingproblem.wordsrpg.data.CustomPackageData" />

        <variable
            name="customdialog"
            type="com.uhavecodingproblem.wordsrpg.dialog.PackageDialog" />
    </data>

    <!--수정 필요함!!-->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Space
            android:id="@+id/space"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:layout_constraintWidth_percent="0.1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_image"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/package_thumbnail_image_round"
            app:layout_constraintHeight_percent="0.6"
            app:layout_constraintWidth_percent="0.4"
            app:layout_constraintLeft_toRightOf="@id/space"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <ImageView
                android:id="@+id/img_basic_package_thumbnail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                image="@{information.profileImageUrl}"
                error="@{@drawable/ic_launcher_background}"
                android:contentDescription="@string/package_thumbnail"/>

            <TextView
                android:id="@+id/tv_title"
                android:text="@{information.packageName}"
                android:textColor="#F2C8"
                android:textStyle="bold"
                android:background="@drawable/package_thumbnail_title"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintHeight_percent="0.1"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/tv_copywriter"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@{@string/package_writer(information.ownerUid)}"
                android:textColor="#F2C8"
                android:textStyle="bold"
                android:background="#668c8c8c"
                android:gravity="end|center_vertical"
                app:layout_constraintHeight_percent="0.1"
                app:layout_constraintTop_toBottomOf="@id/tv_title"/>



            <TextView
                android:id="@+id/tv_progress"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:textColor="#F2C8"
                android:text="@string/toolbar_menu_for_take_an_exam"
                android:gravity="center"
                android:textStyle="bold"
                android:background="@drawable/package_thumbnail_progress"
                app:layout_constraintHeight_percent="0.1"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>



        <TextView
            android:id="@+id/tv_description"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintHeight_percent="0.4"
            app:layout_constraintWidth_percent="0.4"
            app:layout_constraintLeft_toRightOf="@id/layout_image"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/layout_image"/>

        <Button
            android:id="@+id/btn_move_study"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/move_study"
            app:layout_constraintWidth_percent="0.18"
            app:layout_constraintHeight_percent="0.15"
            app:layout_constraintLeft_toLeftOf="@id/tv_description"
            app:layout_constraintBottom_toBottomOf="@id/layout_image"/>

        <Button
            android:id="@+id/btn_move_test"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/move_study"
            app:layout_constraintWidth_percent="0.18"
            app:layout_constraintHeight_percent="0.15"
            app:layout_constraintRight_toRightOf="@id/tv_description"
            app:layout_constraintBottom_toBottomOf="@id/layout_image"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>